# PyElastica-JAX

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
benchmark/: jax_test_speed.py  rotation_small_theta_diagnostic.py
benchmark/rod-contact-scaling/: _rod_contact_common.py  _rod_contact_scaling_sweep.py  jax_rod_contact_mpi_throughput.py  jax_rod_contact_throughput.py  rod_contact_scaling_all.py  run_cpu_multinode.sh  run_cpu_singlenode.sh  run_gpu2x_singlenode.sh  run_gpu_multinode.sh  run_gpu_singlenode.sh  sweep_jax_rod_contact_gpu2x_throughput.py  sweep_jax_rod_contact_mpi_throughput.py
benchmark/rod_contact_scaling/: _rod_contact_common.py  _rod_contact_scaling_sweep.py  rod_contact_scaling_cpu.py  rod_contact_scaling_gpu.py
benchmark/snake-self-activate-multi-node/: jax_snake_mpi_throughput.py  plot_combined_throughput.py  pyelastica_snake_mpi_throughput.py  run.sh  run_gpu.sh  run_pyelastica.sh  sweep_jax_snake_mpi_throughput.py
benchmark/snake-self-activate-single-node/: _jax_snake_common.py  jax_snake_io_restart.py  jax_snake_throughput.py  plot_combined_throughput.py  snake_operation.py  sweep_jax_snake_throughput.py  sweep_jax_snake_throughput.sh
docs/: jax.md  style.md
docs/adr/: 0001-target-dependent-hdf5-save-load.md
examples/ActiveMatter/: README.md  contact_kernels.py  environment.py  forcing.py  frame_io.py  frame_io_workers.py  post_processing.py  render.py  run_snake_on_plane.py  run_snake_pit.py  simulation_runtime.py  utils.py
examples/ActiveMatter/operators/: __init__.py  active_matter_forcing.py
examples/AxialStretchingCase/: operations.py  run.py  run_axial_stretching_gpu.py
examples/ButterflyCase/: operations.py  run.py
examples/CatenaryCase/: operations.py  run.py
examples/ContinuumSnakeCase/: README.md  environment.py  post_processing.py  run_continuum_snake.py
examples/ContinuumSnakeCase/operators/: __init__.py  muscle_torques.py  plane_contact.py
examples/ContinuumSnakeGPUCase/: run_continuum_snake_gpu.py
examples/MuscleRod/: __init__.py  batch_muscle.py  memory_block_muscle_rods_jax.py  muscle_rod.py  muscles.py  old_impl_batch_muscle.py  run_sinusoidal_muscle_arm.py
examples/MuscleRod/matching_test/: __init__.py  compare.py  test_muscle_arm.py
examples/MuscularSnake/: README.md  block_utils.py  environment.py  post_processing.py  run_muscular_snake.py
examples/MuscularSnake/operators/: __init__.py  muscle_forces.py  plane_contact.py  surface_joint.py
examples/NestCase/: README.md  environment.py  post_processing.py  run_nest.py
examples/NestCase/operators/: __init__.py  substrate_interaction.py
examples/RigidBodyCases/: run_many_spheres_gpu.py  run_rod_sphere_tip_gpu.py
examples/TimoshenkoBeamCase/: convergence_functions.py  convergence_timoshenko.py  operations.py  run.py
examples/WormBlob/operators/: substrate_drag.py  thermal_blob_drive.py
src/elastica_jax/: __init__.py  _calculus.py  _linalg.py  _rotations.py  _synchronize_periodic_boundary.py  block_operation.py  execution_mesh.py  operations.py  protocol.py  rod_rigid_body_operation.py  rod_rod_operation.py  simulator.py  typing.py  version.py
src/elastica_jax/checkpoint/: __init__.py  block_checkpoint.py
src/elastica_jax/contact/: __init__.py  capsule_contact.py  capsule_metadata.py  kernels.py  mpi_halo.py  rod_rod_contact.py  rod_rod_kernels.py  spatial_hash.py  spatial_hash_jax.py
src/elastica_jax/io/: __init__.py  api.py  block_state.py  hdf5_io_mixin.py  parallel.py  protocol.py  resolve.py  rod_adapter.py  schema.py
src/elastica_jax/memory_block/: __init__.py  block_factory.py  memory_block_rigid_body_jax.py  memory_block_rod_jax.py  memory_block_rod_vertical_jax.py  mpi_cosserat_rod_jax.py  protocol.py  rod_local_map.py  sharded_cosserat_rod_jax.py  syncable_attrs.py
src/elastica_jax/modules/: __init__.py  jax_ops.py  jax_ops_block.py  jax_ops_rod_rigid_body.py  jax_ops_rod_rod_block.py
src/elastica_jax/timestepper/: gpu_steppers.py  jax_steppers.py  protocol.py
tests/: test_jax_steppers.py
tests/test_benchmark/: test_rod_contact_gpu2x_harness.py  test_rod_contact_mpi_sweep.py  test_rod_contact_singlenode_harness.py
tests/test_checkpoint/: test_block_checkpoint.py
tests/test_contact/: _mpi_halo_capsule_contact_worker.py  test_all_pairs.py  test_hertzian_contact.py  test_mpi_halo_capsule_contact.py  test_multidevice_vertical_capsule_contact.py  test_rod_rod_contact_jax.py  test_spatial_hash.py  test_spatial_hash_jax.py  test_vertical_capsule_contact.py
tests/test_io/: test_save_load_block.py  test_save_load_parallel.py  test_save_load_rod.py  test_save_load_simulator.py
tests/test_math/: test_gpu_steppers.py  test_jax_block_ops.py  test_jax_calculus.py  test_jax_linalg.py  test_jax_rod2rod_block_ops.py  test_jax_rotations.py  test_memory_block_cosserat_rod_jax.py  test_memory_block_rigid_body_jax.py  test_sharded_cosserat_rod_jax.py
tests/test_memory_block/: test_block_device_communication.py  test_map_rods.py  test_memory_block_rod_vertical_jax.py  test_mpi_cosserat_rod_jax.py
tests/test_modules/: test_jax_compatible.py  test_jax_ops_block.py  test_jax_rod_rigid_body_compatible.py  test_memory_block_factory.py
tests/test_timestepper/: test_multi_device_blocks.py  test_snake_benchmark_multi_device.py
tutorial/: 00-block-device-communication.py  01-block-multi-device.py  02-block-multi-device-sharded.py
