[project]
name = "pyelastica-jax"
version = "0.0.1"
description = "Jax integration to PyElastica for GPU integration and better batch processing."
readme = "README.md"
authors = [
    {name = "Seung Hyun Kim", email = "skim0119@gmail.com"},
]
license = "MIT"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
]

requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/skim0119/PyElastica-JAX"
Homepage = "https://www.cosseratrods.org/"
Documentation = "https://docs.cosseratrods.org/en/latest/"

dependencies = [
    "pyelastica",
    "tqdm",
    "click",
    "jax",
    "h5py",
    "mpi4py",
    "mpi4jax",
]

[tool.uv]
no-binary-package = ["h5py", "mpi4py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/elastica_jax"]

[tool.hatch.build.targets.sdist]
include = [
    "src/elastica_jax",
    "tests",
    "README.md",
    "LICENSE",
]

[project.optional-dependencies]
docs = [
    "sphinx>=6.1",
    "sphinx-book-theme>=1.0",
    "readthedocs-sphinx-search>=0.1.1,<0.4.0",
    "sphinx-autodoc-typehints>=1.21",
    "sphinxcontrib-mermaid>=0.9.2",
    "myst-parser>=1.0",
    "numpydoc>=1.3.1",
    "docutils>=0.18",
    "sphinx-gallery>=0.19.0",
    "sphinxcontrib-video>=0.4.1",
]
dev = [
    "pytest",
    "coverage",
    "pre-commit",
    "pytest-html",
    "pytest-cov",
    "pytest-rng",
    "pytest-mock",
    "codecov",
    "click",
    "mypy",
    "mypy-extensions",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "build",
    "dist",
    "docs/_build",
    "docs/_gallery",
    "docs/gen_modules",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
]
ignore = [
    "E402",
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"src/elastica_jax/__init__.py" = ["F401"]
"src/elastica_jax/memory_block/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.12"
pretty = true
show_traceback = true
color_output = true
strict = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = false

exclude = [
    "src/elastica_jax/experimental/*",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Enable pragma
    "pragma: no cover",
    "TODO",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == __main__:",
    "pass",
    "def __repr__",
#"if self.debug:",
#"if settings.DEBUG",
    "from",
    "import",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    '''class '.*\bProtocol\)':''',
#''''@(abc\.)?'abstractmethod''',
]
fail_under = 40
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/.local/*",
    "setup.py",
    "src/elastica_jax/experimental/*",
    "src/elastica_jax/**/protocol.py",
]
